package org.example.Ex41.Base;

import java.util.ArrayList;
import java.util.Collections;

public class SortDataList {
    public ArrayList<String> sort(ArrayList<String> dataList) {

        Collections.sort(dataList);

        return dataList;
    }
}
